--- a/TwitterSentimentAnalyser/TSentimentAnalyser/templates/base.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/templates/base.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Home Page</title>
+  <title>Tweesent</title>
 
   <!-- Bootstrap core CSS -->
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -56,9 +56,8 @@
     <div class="wrapper flex-grow-1"></div>
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; A website created by Students from the University of Liechtenstein</p>
+      <p class="m-0 text-center text-white">Copyright &copy; A website created by students from the University of Liechtenstein</p>
     </div>
-    <!-- /.container -->
   </footer>
 </body>
 
