--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
@@ -8,8 +8,9 @@
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
           <h1 class="display-4 text-white mt-5 mb-2">Welcome to Tweesent</h1>
-			<p class="lead mb-0 text-white">Tweesent is an easy and fast sentiment analyser to investigate real-time Tweets on Twitter.</p>
-			<p class="lead mb-5 text-white"> Just enter the required data below and start analysing whichever Tweets you like!</p>
+			<p class="lead mb-0 text-white-50">Tweesent is an easy and fast sentiment analyser to investigate real-time Tweets on Twitter.</p>
+			<p class="lead mb-5 text-white-50"> Just enter the required data below and start analysing whichever Tweets you like!</p>
+				  <!-- Forms for Hashtag / Word Input and Number of Tweets -->
 				<div class="col-md-12">
 					<div class ="form-group ">
 						<form action="analysis" method="post">
@@ -51,7 +52,7 @@
 
   <!-- Page Content -->
 
-
+  <!-- Container including Trends Forms and Results -->
   <div class="container">
 
     <div class="row">
@@ -76,7 +77,7 @@
 		</div>
   	</div>
   </div>
-
+  <!-- How it works and Video  -->
 <div class="container">
   <div class="row">
     <div class="col-md-12 mb-2">
