--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/analysis.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/analysis.html
@@ -32,6 +32,7 @@
             <div class="card text-center">
               <div class="card-body">
                 <h5 class="card-title">Pulled Tweets</h5>
+                               <h5 class="card-text">{{test}}</h5>
                 <h5 class="card-text">{{input_num_terms}}</h5>
               </div>
             </div>
