Cleaned some minor things and removed unused code

--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
@@ -57,7 +57,7 @@
 
     <div class="row">
 		<div class="col-md-8 mb-5">
-		<h2>Region Specific Trends</h2>
+		<h2>Country Specific Trends</h2>
 		<hr>
         <p>Would you like to know more about a certain location? Just insert any place you want in the form below.</p>
 			<div class ="form-group">
