--- a/TwitterSentimentAnalyser/TSentimentAnalyser/templates/FAQ.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/templates/FAQ.html
@@ -3,7 +3,7 @@
 {% load static %}
 
   <!-- Header -->
-  <header class="bg-primary py-5 mb-5">
+  <header class="py-5 mb-5" style="background-image: url('static/images/banner_no_logo.png'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
