Removed gif and replaced with mp4 format

--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/analysis.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataAnalyser/templates/analysis.html
@@ -205,7 +205,7 @@
             <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#showcase">Expand / Collapse</button>
           </div>
           <div class="col-md-2 mb-3">
-            <form method="get" action="{% static 'raw_tweets.xlsx' %}">
+            <form method="get" action="{% static '/xlsx/raw_tweets.xlsx' %}">
               <button type="submit" class="btn btn-primary">Download Excel</button>
             </form>
           </div>
