--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
@@ -97,9 +97,7 @@
   	  </div>
       <div class="col-md-7">
         <div class="card border-0 mb-5">
-          <div class="text-justify">
-            <img class="card-img-bottom" src="{% static 'gifs/how_to.gif' %}">
-          </div>
+            <video class="card-img-bottom" src="{% static 'movies/tutorial.mp4' %}" controls></video>
         </div>
       </div>
   	</div>
