Changed GitHub Link

--- a/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/App_TwitterDataCollector/templates/home.html
@@ -92,7 +92,7 @@
 			<p class="text-justify"> All used Tweets are real-time data by people that are just talking about whatever topic you would like to have a look at. </p>
         	<p class="text-justify">The maximum of Tweets that can be pulled is set to 500. This is due to the reason that the Twitter API only allows for a certain amount of Tweets to be pulled in a given period.</p>
 			<p class="text-justify">If you want to know more about Tweesent visit our <a href="http://127.0.0.1:8000/FAQ">FAQ Page</a> or <a href="http://127.0.0.1:8000/FAQ">contact us</a>.</p>
-			<p class="text-justify">Would you like to use this project for your own or expand it? Visit our <a href="https://github.com/fschadler/ISD">Github page</a>.</p>
+			<p class="text-justify">Would you like to use this project for your own or expand it? Visit our <a href="https://github.com/fschadler/Tweesent">Github page</a>.</p>
 		</div>
   	  </div>
       <div class="col-md-7">
