--- a/TwitterSentimentAnalyser/TSentimentAnalyser/templates/FAQ.html
+++ b/TwitterSentimentAnalyser/TSentimentAnalyser/templates/FAQ.html
@@ -54,7 +54,7 @@
 		<div class="col-md-12 mb-5">
 		<h2>Can I use this project or expand it by myself?</h2>
 		<hr>
-		<p class = "text-justify">Yes, our whole project is accessible on <a href="https://github.com/fschadler/ISD">Github</a>. You can host it by yourself or edit it to your liking.</p>
+		<p class = "text-justify">Yes, our whole project is accessible on <a href="https://github.com/fschadler/Tweesent">Github</a>. You can host it by yourself or edit it to your liking.</p>
 		</div>
   	</div>
 
